# Logic_circit_2

./: Bit_Size.c  CMakeLists.txt  Common.h  Control_Flow.c  Convert.h  Input_Handle.c  Need_Parity.c  Print_Hamming.c  Print_Hamming_Code.c  README.md  Set_Hamming.c  input_handle.c  main.c  need_Parity.c
